# FastCanvas

./: .gitignore  1.json  Except.hs  FastCanvas-Backend.cabal  Interactive.hs  README.md  Settings.hs  SimpleCanvas.hs  TentativePush.hs
App/: index.html  main.js  package.json  renderer.js
App/Assets/: nav.js
App/Assets/css/: colors.css  file_manager.css  nav.css  sync.css
App/components/: nav.js  sync.js
App/css/: colors.css  material-icons.css  nav.css  spin.css  sync.css
Assets/: Config.json
Assets/JSONSample/: json'.json  json.json
Assets/TokenRaw/: Token.txt
Backend/: Main.hs  stack.yaml
Backend/Communication/: Send.hs
Backend/Course/: List.hs
Backend/Endpoint/: Courses.hs  Peek.hs  Sync.hs
Backend/Settings/Exception/: ResponseCodeException.hs
Backend/Settings/Exception/Prettify/: HttpException.hs
Backend/Settings/Monad/: Global.hs
Backend/src/Communication/: Send.hs
Backend/src/Endpoint/: Courses.hs  Peek.hs  Sync.hs
Backend/src/Files/: Structure.hs
Backend/src/Settings/: Network.hs
Backend/src/Settings/Exception/: GeneralException.hs
Backend/src/Settings/Monad/: Exception.hs  Global.hs  State.hs
Communication/: Format.hs  Send.hs
Course/: Course.hs  CourseFile.hs  File.hs  File1.hs  List.hs
Files/: Digest.hs  Downloader.hs  Downloader1.hs  State.hs  Structure.hs  Tree.hs
Files/Node/: Download.hs  FSNode.hs  NodeJSON.hs
Frontend/: Initialize.hs  SimpleCanvas.hs
Frontend/Course/: File.hs
Lab/: 1.txt  Conc.hs  DirTree.hs  Download.hs  PB.hs  Par.hs  ParTree.hs  ParTreeMonad.hs  Semaphore.hs  Seq.hs
Obsolete/Ver1/: CourseFile.hs  Downloader.hs
Obsolete/Ver2/: Global.hs  Settings.hs  SimpleCanvas.hs  Token.hs
Settings/: Exception.hs  Global.hs  Imports.hs  Initialize.hs  Network.hs  Settings.hs
Settings/Endpoint/: Paginate.hs
Settings/Environment/: Reader.hs  State.hs
Settings/Exception/: GeneralException.hs  Prettify.hs
Settings/Exception/Prettify/: HttpException.hs  JSONException.hs
Settings/Monad/: Exception.hs  Global.hs  Reader.hs  State.hs  Writer.hs
Settings/Token/: Token.hs
src/Assets/: Config.json
src/Files/: FingerPrint.hs
src/Files/Local/: Entry.hs
src/Sync/: DirTree.hs
